# JWT_LoginServer

./: .gitignore  Cargo.toml  README.md
config/: Config.toml
src/: main.rs
src/config/: config_structs.rs  manager.rs  mod.rs
src/deserializer/: custom.rs
src/payloads/: authentification_structs.rs  mod.rs
src/security/: from_request_guard.rs  guard.rs  jwt.rs  jwt_struct.rs  mod.rs
