[package]
name = "login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
serde = { version = "1", features = ["derive"] }
config = "0.13"
toml = "0.8"
base64 = "0.21"
jsonwebtoken = "9"
env_logger = "0.11"
